--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ScanCal — A calculator designed for humans and power users. Basic, Scientific, Programmer, and Graphing modes. Works offline. Privacy first.">
-  <title>ScanCal — Calculator for Humans and Power Users</title>
+  <title>CalcXpert — Calculator for Humans and Power Users</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0C0D10">
@@ -19,7 +19,7 @@
   <!-- Navigation -->
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <a href="index.html" class="nav-logo" aria-label="ScanCal Home">
-      <span aria-hidden="true">⬡</span> Scan<span>Cal</span>
+      <span aria-hidden="true">⬡</span>Calc<span>Xpert</span>
     </a>
 
     <ul class="nav-links" role="list">
@@ -58,7 +58,7 @@
         <div class="hero-ctas">
           <a href="app.html" class="btn btn-primary" aria-label="Open ScanCal calculator app">
             <span aria-hidden="true">⬡</span>
-            Open ScanCal
+            Open CalcXpert
           </a>
           <a href="#demo" class="btn btn-ghost" aria-label="Try the interactive demo below">
             Try demo ↓
