--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>© 2025 ScanCal. Built with ♥ for power users everywhere.</p>
+      <p>© 2025 CalcXpert. Built with harsh jethwa for power users everywhere.</p>
       <p style="font-size:0.8rem; color:var(--text-3);">v1.0.0 — No cookies. No trackers.</p>
     </div>
   </footer>
