--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="mini-calc" role="region" aria-label="Mini calculator demo" aria-live="polite">
             <div class="mini-display">
               <div class="mini-expr" id="miniExpr" aria-label="Expression"></div>
-              <div class="mini-result" id="miniResult" aria-label="Result" aria-live="polite">0</div>
+              <button class="mini-key num" data-val="0" aria-label="0">0</button>
             </div>
             <div class="mini-keys" role="group" aria-label="Calculator keys">
               <button class="mini-key special" data-val="C" aria-label="Clear">C</button>
