--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <button class="mini-key num" data-val="3" aria-label="3">3</button>
               <button class="mini-key op" data-val="+" aria-label="Add">+</button>
 
-              <button class="mini-key num" data-val="0" aria-label="0" style="grid-column: span 2;">0</button>
+<button class="mini-key num" data-val="0" aria-label="0">0</button>
               <button class="mini-key num" data-val="." aria-label="Decimal">.</button>
               <button class="mini-key eq" data-val="=" aria-label="Equals">=</button>
             </div>
