--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ScanCal — Full calculator app with Basic, Scientific, Programmer, and Graphing modes.">
-  <title>ScanCal App — Calculator</title>
+  <title>CalcXpert App — Calculator</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
   <style>
