--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
               <button class="mini-key num" data-val="6" aria-label="6">6</button>
               <button class="mini-key op" data-val="−" aria-label="Subtract">−</button>
 
-              <button class="mini-key num" data-val="1" aria-label="1">1</button>
+<button class="mini-key num" data-val="1" aria-label="1">1</button>
               <button class="mini-key num" data-val="2" aria-label="2">2</button>
               <button class="mini-key num" data-val="3" aria-label="3">3</button>
               <button class="mini-key op" data-val="+" aria-label="Add">+</button>
 
-<button class="mini-key num" data-val="0" aria-label="0">0</button>
+<button class="mini-key num zero" data-val="0" aria-label="0">0</button>
               <button class="mini-key num" data-val="." aria-label="Decimal">.</button>
               <button class="mini-key eq" data-val="=" aria-label="Equals">=</button>
             </div>
