--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <div class="testimonial-author">
               <div class="testimonial-avatar" style="background:#6EE7B7;" aria-hidden="true">AK</div>
               <div class="testimonial-author-info">
-                <strong>Alex K.</strong>
-                <span>Software Engineer</span>
+                <strong>Mayank solnki</strong>
+                <span>3rd year student</span>
               </div>
             </div>
           </article>
@@ -218,8 +218,8 @@
             <div class="testimonial-author">
               <div class="testimonial-avatar" style="background:#FBBF24;" aria-hidden="true">MR</div>
               <div class="testimonial-author-info">
-                <strong>Maya R.</strong>
-                <span>Embedded Systems Dev</span>
+                <strong>abhi mistry</strong>
+                <span>3rd year student</span>
               </div>
             </div>
           </article>
@@ -230,8 +230,8 @@
             <div class="testimonial-author">
               <div class="testimonial-avatar" style="background:#F87171;" aria-hidden="true">SL</div>
               <div class="testimonial-author-info">
-                <strong>Sam L.</strong>
-                <span>UX Researcher</span>
+                <strong>ravi kapdiya</strong>
+                <span>2nd year student</span>
               </div>
             </div>
           </article>
