--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <div class="hero-demo" id="demo">
           <div class="mini-calc" role="region" aria-label="Mini calculator demo" aria-live="polite">
             <div class="mini-display">
+              <div class="mini-result" id="miniResult" aria-label="Result">0</div>
               <div class="mini-expr" id="miniExpr" aria-label="Expression"></div>
               <button class="mini-key num" data-val="0" aria-label="0">0</button>
             </div>
@@ -268,7 +269,7 @@
     <div class="footer-inner">
       <div class="footer-brand">
         <a href="index.html" class="nav-logo" style="font-size:1.2rem;">
-          <span>⬡</span> Scan<span>Cal</span>
+          <span>⬡</span> calc<span>xpert</span>
         </a>
         <p>A calculator designed for humans and power users. Open source. Privacy first.</p>
       </div>
