--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </article>
 
           <article class="testimonial-card" role="listitem">
-            <div class="testimonial-stars" aria-label="5 out of 5 stars">★★★★★</div>
+            <div class="testimonial-stars" aria-label="4 out of 5 stars">★★★★</div>
             <p class="testimonial-text">"The programmer mode with base conversions is incredible. I use it every day for bit manipulation work."</p>
             <div class="testimonial-author">
               <div class="testimonial-avatar" style="background:#FBBF24;" aria-hidden="true">MR</div>
@@ -257,7 +257,7 @@
         <h2 id="cta-heading">A calculator for creators, coders and the curious.</h2>
         <p>Try it free — no account, no data collection, no BS.</p>
         <div class="hero-ctas">
-          <a href="app.html" class="btn btn-primary">Open ScanCal — it's free</a>
+          <a href="app.html" class="btn btn-primary">Open calcxpert — it's free</a>
           <a href="help.html" class="btn btn-ghost">View keyboard shortcuts</a>
         </div>
       </div>
