--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScanCal — About</title>
+  <title>calcxpert — About</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <a href="index.html" class="nav-logo" aria-label="ScanCal Home">
-      <span>⬡</span> Scan<span>Cal</span>
+      <span>⬡</span> calc<span>xpert</span>
     </a>
     <ul class="nav-links" role="list">
       <li><a href="app.html">App</a></li>
@@ -28,7 +28,7 @@
 
   <main id="main" style="max-width:800px; margin:0 auto; padding:8rem 2rem 4rem;" class="page">
     <div style="margin-bottom:3rem;">
-      <p class="section-label">About ScanCal</p>
+      <p class="section-label">About calcxpert</p>
       <h1 style="font-family:var(--font-display); font-weight:800; font-size:2.5rem; letter-spacing:-0.02em; margin-bottom:0.5rem;">
         Built for People Who Care About Tools
       </h1>
@@ -40,11 +40,11 @@
       <div style="display:flex; align-items:center; gap:1.5rem; flex-wrap:wrap;">
         <div style="font-size:3rem;" aria-hidden="true">⬡</div>
         <div>
-          <h2 style="font-family:var(--font-display); font-weight:800; font-size:1.5rem; margin-bottom:0.25rem;">ScanCal v1.0.0</h2>
+          <h2 style="font-family:var(--font-display); font-weight:800; font-size:1.5rem; margin-bottom:0.25rem;">calcxpert.png v1.0.0</h2>
           <p style="color:var(--text-2); font-size:0.9rem;">Released February 2025 • MIT License</p>
         </div>
         <div style="margin-left:auto; display:flex; gap:0.5rem;">
-          <a href="#" class="btn btn-ghost btn-sm" aria-label="View on GitHub">⭐ GitHub</a>
+          <a href="https://github.com/jethwa76/CalcXpert" class="btn btn-ghost btn-sm" aria-label="View on GitHub">⭐ GitHub</a>
           <a href="#changelog" class="btn btn-ghost btn-sm" aria-label="View changelog">Changelog</a>
         </div>
       </div>
@@ -120,7 +120,7 @@
       <div class="changelog-item">
         <div>
           <span class="changelog-version">v1.0.0</span>
-          <p class="changelog-date" style="margin-top:0.25rem;">February 2025</p>
+          <p class="changelog-date" style="margin-top:0.25rem;">February 2026</p>
         </div>
         <div>
           <p class="changelog-desc">Initial release. Basic, Scientific, Programmer, and Graphing modes. PWA support, history panel, keyboard shortcuts, dark/light themes, accessibility features.</p>
@@ -130,7 +130,7 @@
       <div class="changelog-item">
         <div>
           <span class="changelog-version">v0.9.0</span>
-          <p class="changelog-date" style="margin-top:0.25rem;">January 2025</p>
+          <p class="changelog-date" style="margin-top:0.25rem;">January 2026</p>
         </div>
         <div>
           <p class="changelog-desc">Beta release. Core calculator engine, WCAG compliance, responsive layout, custom expression parser with operator precedence.</p>
@@ -140,7 +140,7 @@
       <div class="changelog-item" style="border:none; padding-bottom:0;">
         <div>
           <span class="changelog-version">v0.1.0</span>
-          <p class="changelog-date" style="margin-top:0.25rem;">December 2024</p>
+          <p class="changelog-date" style="margin-top:0.25rem;">December 2025</p>
         </div>
         <div>
           <p class="changelog-desc">Project inception. Design system, component library, and architecture planning.</p>
