--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScanCal — Settings</title>
+  <title>CalcXpert — Settings</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <a href="index.html" class="nav-logo" aria-label="ScanCal Home">
-      <span>⬡</span> Scan<span>Cal</span>
+      <span>⬡</span>Calc<span>Xpert</span>
     </a>
     <ul class="nav-links" role="list">
       <li><a href="app.html">App</a></li>
@@ -44,7 +44,7 @@
       <div class="settings-row">
         <div class="settings-row-info">
           <h3>Color Theme</h3>
-          <p>Choose how ScanCal looks to you</p>
+          <p>Choose how CalcXpert looks to you</p>
         </div>
         <select class="settings-select" id="themeSelect" aria-label="Select color theme">
           <option value="dark">Dark</option>
