--- a/help.html
+++ b/help.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScanCal — Help & Shortcuts</title>
+  <title>CalcXpert — Help & Shortcuts</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
   <nav class="nav" role="navigation" aria-label="Main navigation">
     <a href="index.html" class="nav-logo" aria-label="ScanCal Home">
-      <span>⬡</span> Scan<span>Cal</span>
+      <span>⬡</span>Calc<span>Xpert</span>
     </a>
     <ul class="nav-links" role="list">
       <li><a href="app.html">App</a></li>
