--- a/app.html
+++ b/app.html
@@ -63,7 +63,7 @@
             <span></span><span></span><span></span>
           </button>
           <a href="index.html" class="nav-logo" style="font-size:1.1rem;" aria-label="ScanCal home">
-            <span>⬡</span> Scan<span>Cal</span>
+            <span>⬡</span> Calc<span>Xpert</span>
           </a>
         </div>
 
